--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-<!-- Your code here -->
+<!DOCTYPE html>
+<html lang="en">
+
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>My Site Title</title>
+        <link rel="stylesheet" type="text/css" href="style.css">
+    </head>
+    <body>
+     <h1>My Heading</h1>
+        <p>My Paragraph</p>
+    </body>
+</html>
